# RolaBot

./: CMakeLists.txt  Dockerfile  start.sh
src/: Conn.hpp  Juego.hpp  Socio.hpp  main.cpp
